--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,11 +1,75 @@
-
-
-
-
-
-
-<div class="container">
-  <h1>Welcome to my website!</h1>
-  <p>We offer a range of services to help you achieve your goals.</p>
-  <a routerLink="/services">Learn more about our services</a>
+<div class="banner-main">
+  <div class="container">
+    <div id="main_slider" class="carousel_slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="titlepage-h1">
+            <h1 class="bnner_title">Welcome To<br>
+              <span style="color: #10b5fa">Content Writing Services</span>
+            </h1>
+            <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking </p>
+          </div>
+          <div class="btn_main">
+            <button type="button" class="btn btn-dark btn-lg">Contact</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="titlepage-h1">
+            <h1 class="bnner_title">Welcome To<br>
+              <span style="color: #10b5fa">Content Writing Services</span>
+            </h1>
+            <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking </p>
+          </div>
+          <div class="btn_main">
+            <button type="button" class="btn btn-dark btn-lg">Contact</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="titlepage-h1">
+            <h1 class="bnner_title">Welcome To<br>
+              <span style="color: #10b5fa">Content Writing Services</span>
+            </h1>
+            <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking </p>
+          </div>
+          <div class="btn_main">
+            <button type="button" class="btn btn-dark btn-lg">Contact</button>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#main_slider" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        
+      </a>
+      <a class="carousel-control-next" href="#main_slider" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </a>
+    </div>
+  </div>
+  <div class="centered-content">
+    <div class="creative_taital">
+        <h1 class="creative_text">Creative Content Writing Services</h1>
+        <p style="color: #050000;">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infanc</p>
+        <div class="btn_main">
+            <button type="button" class="btn btn-dark btn-lg">Get started</button>
+        </div>
+    </div>
 </div>
+
+</div>
+
+<script>
+  $(document).ready(function() {
+
+    $("#main_slider").carousel({
+      interval: 3000 
+    });
+  });
+</script>
+
+
+
+
+
+
+<app-services></app-services>
+
