Responsive mobile navbar and  post  will be added

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -36,11 +36,11 @@
           </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#main_slider" role="button" data-bs-slide="prev">
+      <a class="carousel-control-prev"  role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         
       </a>
-      <a class="carousel-control-next" href="#main_slider" role="button" data-bs-slide="next">
+      <a class="carousel-control-next"  role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
       </a>
     </div>
