--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="map_icon">
-                    <img src="/assets/map-icon.png" style="max-width: 100%; padding-left: 30px;">
+                    <img src="/assets/email-icon.png" style="max-width: 100%; padding-left: 30px;">
                     <p class="email-text"><a href="#">demo@gmail.com</a></p>
                 </div>
             </div>
