--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,22 @@
 <header>
-    <main>
-        <img class="logo" src="/assets/logo.png" alt="logo">
-    </main>
-    <nav class="header__menu">
-      <div class="header_main">
-        <a routerLink="/">Home</a>
-        <a routerLink="/about" routerLinkActive="active-link">About</a>
-        <a routerLink="/services">Services</a>
-        <a routerLink="/blog">Blog</a>
-        <a routerLink="/contact">Contact</a>
-        
-      </div><div>
-        <img src="/assets/search-icon.png" alt="">
+  <main>
+    <img class="logo" src="/assets/logo.png" alt="logo">
+  </main>
+  <nav class="header__menu">
+    <div class="header_main">
+      <a routerLink="/">Home</a>
+      <a routerLink="/about" routerLinkActive="active-link">About</a>
+      <a routerLink="/services">Services</a>
+      <a routerLink="/blog">Blog</a>
+      <a routerLink="/contact">Contact</a>
+
     </div>
-    </nav>
-    
-  </header>
+    <div>
+      <img src="/assets/search-icon.png" alt="">
+    </div>
+    <div>
+      <app-menu></app-menu></div>
+
+  </nav>
+
+</header>
