--- a/src/app/views/blog/blog.component.html
+++ b/src/app/views/blog/blog.component.html
@@ -3,14 +3,14 @@
  <div class="main">
     <div class="section">
         <img src="/assets/code.jpg" alt="products">
-        <h3>Tarih</h3>
+        <h3 class="date">26 JULY 2019</h3>
       <div>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
           form, by injected humour, or randomised words which don't look even slightly believable.</p>
       </div></div>
       <div class="section">
         <img src="/assets/code.jpg" alt="products">
-        <h3>Tarih</h3>
+        <h3 class="date">26 JULY 2019</h3>
       
       <div>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
@@ -18,7 +18,7 @@
       </div></div>
       <div class="section">
         <img src="/assets/code.jpg" alt="products">
-        <h3>Tarih</h3>
+        <h3 class="date">26 JULY 2019</h3>
       
       <div>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
@@ -26,7 +26,14 @@
       </div></div>
       <div class="section">
         <img src="/assets/code.jpg" alt="products">
-        <h3>Tarih</h3>
+        <h3 class="date">26 JULY 2019</h3>
+      <div>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+          form, by injected humour, or randomised words which don't look even slightly believable.</p>
+      </div></div>
+      <div class="section">
+        <img src="/assets/code.jpg" alt="products">
+        <h3 class="date">26 JULY 2019</h3>
       
       <div>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
@@ -34,15 +41,7 @@
       </div></div>
       <div class="section">
         <img src="/assets/code.jpg" alt="products">
-        <h3>Tarih</h3>
-      
-      <div>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-          form, by injected humour, or randomised words which don't look even slightly believable.</p>
-      </div></div>
-      <div class="section">
-        <img src="/assets/code.jpg" alt="products">
-        <h3>Tarih</h3>
+        <h3 class="date">26 JULY 2019</h3>
       
       <div>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
