--- a/src/app/views/blog/blog.component.css
+++ b/src/app/views/blog/blog.component.css
@@ -18,7 +18,21 @@
     padding-bottom: 50px;
 
   }
-  
+  .date{
+    background: #072833;
+    border: none;
+    color: #fff;
+    width: 110px;
+    height: 35px;
+    font-size: 12px;
+    margin-top: -35px;
+    font-weight: 500;
+    float: left;
+    max-width: 100%;
+    clear: both;
+    position: relative;
+    padding-top:10px;
+  }
   img {
     width: 100%;
   }
