the home page has been updated

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -55,6 +55,7 @@
     </div>
 </div>
 
+
 </div>
 
 <script>
@@ -70,4 +71,15 @@
 <div class="services">
   <app-services></app-services>
 </div>
+<div class="quote_section">
+  <div class="section_title">
+    <div class="section_left">
+      <h3>Quote for Today</h3>
+    <p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
+    </div>
+    <button class="section_right">Get A Quote</button>
+  </div>
+  
+</div>
+<app-contact></app-contact>
 
