--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -18,6 +18,39 @@
     text-align: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     padding: 20px;
+    background-color: white;
+}
+.quote_section{
+  display: flex;
+  justify-content:center;
+  width: 100%;
+    float: left;
+    background-color: #076787;
+    height: auto;
+    padding: 20px;
+    font-weight: bold;
+}
+.section_title{
+  display:flex;
+  gap: 50px;
+  color: #ffffff;
+  width:60%;
+}
+.section_left{
+  max-width:50%;
+}
+.section_right{
+  max-width:50%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 20px;
+  background-color: #343A40;
+  color: #ffffff;
+  height: 50px;
+  padding:8px 16px;
+  border-radius:10px;
+  font-size:20px;
+
 }
 
 .creative_taital {
@@ -64,6 +97,9 @@
     background-repeat: no-repeat;
     background-position: center center;
 
+  }
+  .services{
+    margin-top:50px;
   }
   @media (max-width: 1400px) {
     .banner-main {
