--- a/src/app/components/contact-us/contact-us.component.css
+++ b/src/app/components/contact-us/contact-us.component.css
@@ -184,3 +184,32 @@
   align-items: center;
   flex-wrap: wrap;
 }
+/* Mobil cihazlarda */
+@media (max-width: 767px) {
+  .col-sm-4 {
+    display:inline-block;
+    justify-content:  center !important;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .contact_section_2{
+    margin: -100px;
+  }
+  
+}
+
+/* Tablet cihazlarda */
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-sm-4 {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+}
+
+/* Masaüstü cihazlarda */
+@media (min-width: 992px) {
+  .col-sm-4 {
+    width: 33.33%;
+    margin-bottom: 0;
+  }
+}
