--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,61 +1,126 @@
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
+.navbar {
+  position: absolute;
+  background-color:#072833 !important;
+  width: 100%;
+  color: #fff;
+  top: 30;
+  flex-wrap: wrap;
+  left: 0;
+  right: 0;
+
+  transition: padding 0.3s linear;
+  -webkit-transition: padding 0.3s linear;
+  z-index: 999;
+  position:relative;
+  
+  
+}
+
+.navbar > .container {
+  height: auto;
+  
+}
+.navbartop-btn:hover .mat-button-focus-overlay {
+  display: none;
+}
+.navbar:not(.navbar-fixed) .navbartop-btn .mat-button-ripple {
+  top: -22px;
+  bottom: -22px;
+}
+
+.navbar-fixed {
+  position: fixed !important;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding: 0 !important;
+  box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
+  animation: .6s slideDown forwards;
+}
+.navbar-fixed .container {
+  height: 60px !important;
+}
+.navbar-fixed .navbartop-btn {
+  line-height: 60px !important;
+  
+}
+
+.navbar-toggle {
+  display: none !important;
+  position: relative !important;
+  right: 5px;
+  padding: 10px 20px;
+ 
+  border-radius:5px;
+}
+.icon-button {
+  .mat-icon {
+    font-size: 20px;
+    
+
+  }
+}
+.navbar-toggle {
+  display: block !important;
+}
+.navbar-opened:host .container {
+  height: 40vh !important;
+  padding: 0px !important;
+  margin: 20px !important;
+}
+
+
+/* 768 pikselin altındaki ekranlar için */
+@media only screen and (max-width: 768px) {
+  /* tüm "a" etiketlerini gizle */
+  a {
+    display: none;
+  }
+  .navbar{
+    
+    
   }
   
-  nav {
+  
+  
+  /* menü butonuna tıklandığında açılacak olan menüyü göstermek için */
+  .navbar-toggle {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+
   }
-  
-  button {
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem;
-    color: #fff;
-    cursor: pointer;
+}
+@media (min-width: 768px) {
+  .navbar{
+    display:none !important;
   }
-  
-  .menu {
-    background-color: #333;
-    position: fixed;
-    top: 70px;
-    left: -100%;
-    width: 100%;
-    height: calc(100% - 70px);
-    padding-top: 60px;
-    transition: all 0.3s ease-in-out;
-    z-index: -1;
+ 
+    .top-navbar {
+      display:none !important;
+    }
+    
+}
+
+.navbar-opened:host {
+  .top-navbar {
+      display: block !important;
+      width: 100% !important;
+      flex: none !important;
+      color: #000;
+      background: #f3f3f3;
+      transition: height 0.3s ease-in-out;
+      
   }
-  
-  .menu.open {
-    left: 0;
-    z-index: 1;
-  }
-  
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  li {
-    margin: 0;
-    padding: 0;
-  }
-  
-  li a {
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-bottom: 1px solid #444;
-  }
-  
+}
+.navbar-opened:host .top-navbar a {
+  display:inline-block;
+  width: 100%;
+  text-decoration: none;
+  font-weight: bold;
+  color:#ffffff !important;
+  line-height: 56px !important;
+  padding-right: 60px; 
+    padding-left: 0; 
+    color: #fff; 
+    font-size: 16px; 
+    letter-spacing: 0.5px;
+}
