--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -87,7 +87,7 @@
 <div class="quote_section">
   <div class="section_title">
     <div class="section_left">
-      <h3>Quote for Today</h3>
+      <h3 class="titleQuote">Quote for Today</h3>
       <p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
     </div>
     <button class="section_right">Get A Quote</button>
