--- a/src/app/views/about/about.component.css
+++ b/src/app/views/about/about.component.css
@@ -29,3 +29,18 @@
     font-size: 15px;
     line-height: 24px;
 }
+@media (max-width: 768px){
+    .creative_taital{
+       width:auto;
+    }
+    .creative_text{
+            width: 100%;
+            margin-right:-24px;
+    }
+    .text{
+        width: 100%;
+    }
+    .get{
+        width: 50%;
+    }
+}
