--- a/src/app/views/services/services.component.css
+++ b/src/app/views/services/services.component.css
@@ -60,7 +60,13 @@
   @media only screen and (max-width: 768px) {
     .section {
       flex-basis: 100%;
+      
     }
+    .title{
+      width: 80%;
+    }
+    
+    img{margin-top: 20px;}
   }
   
   /* Mobil için stiller */
