--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,3 +9,9 @@ p{
     padding-bottom: 10px;
     color: #fbfdfd;;
 }
+@media (max-width: 768px){
+    p{
+        width: 100%;
+        margin:auto;
+    }
+}
